# text-classifier-explainable

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
artifacts/evaluation_report/: model_metrics.json
artifacts/notebooks_artifacs/: metrics.json  params.json
artifacts/notebooks_artifacts/: experiment_metrics.json  params.json
config/: model.json  paths.json
models/: explainer.joblib
notebooks/: 01_eda.ipynb  02__preprocessing_and_training.ipynb  02_preprocessing_and_training.ipynb  03_explainability.ipynb
scripts/: build_explainer.py  download_data.py  evaluate_model.py  load_data.py  train_model.py
src/tce/: data.py  evaluate.py  explain.py  model.py  utils.py
src/text_classifier_explainable/: data.py  evaluate.py  explain.py  model.py  preprocessing.py  utils.py
