[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-classifier-explainable"
version = "0.1.0"
description = "Explainable text classifier (TF-IDF + Logistic Regression + SHAP)"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
